<resources>
    <string name="app_name">tienda_op_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="query_search">Buscar</string>
    <string name="title_home_prodcutos">Productos TecniStore</string>
    <string name="title_categorias_title">Categorias</string>
    <string name="title_cantidad_title">Unidades Disponibles</string>
    <string name="title_splash">TecniStore</string>
    <string name="sub_title_splash">Tecnología para todos</string>
    <string name="label_login_user">Usuario</string>
    <string name="label_login_clave">Contraseña</string>
    <string name="hint_login_usuario">Usuario</string>
    <string name="hint_login_clave">Contraseña</string>
    <string name="title_view_login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="hint_txt_nombre">Nombre</string>
    <string name="hint_txt_apellido">Apellido</string>
    <string name="titulo_btn_sign_up_siguiente">Siguiente</string>

    <string name="hint_txt_telefono">Telefono o Celular</string>
    <string name="hint_txt_email">Email</string>
    <string name="hint_txt_cedula">Cedula</string>
    <string name="hint_txt_direccion">Dirección Domicilio</string>
    <string name="titulo_home_productos">Productos</string>
    <string name="login_txt_username">Usuario</string>
    <string name="login_txt_password">Contraseña</string>
    <string name="login_txt_password_repi">Confirmar Contraseña</string>


</resources>