<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login" android:background="@color/blanco_azulado">

    <androidx.cardview.widget.CardView
            android:layout_width="324dp"
            android:layout_height="295dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="30dp" android:id="@+id/cardView4" app:cardElevation="5dp">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="284dp"
                android:layout_height="70dp" android:layout_marginStart="42sp" android:layout_marginTop="80dp"
                android:backgroundTint="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_login_usuario"
                    android:backgroundTint="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="284dp"
                android:layout_height="70dp"
                android:layout_marginStart="42sp"
                android:layout_marginTop="180dp"
                app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/hint_login_clave"
                    android:backgroundTint="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
    <Button
            android:text="Iniciar Sesion"
            android:layout_width="201dp"
            android:layout_height="86dp" android:id="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.378" android:elevation="100dp" android:textSize="17sp"
            android:textStyle="bold" android:fontFamily="@font/allerta"/>
    <androidx.cardview.widget.CardView
            android:layout_width="116dp"
            android:layout_height="112dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="50dp" app:cardElevation="10dp" android:id="@+id/cardView5"
            android:layout_marginTop="48dp" app:layout_constraintHorizontal_bias="0.498">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/user_login" android:id="@+id/imageView4"
        />
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/title_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintBottom_toTopOf="@+id/cardView4" app:layout_constraintTop_toBottomOf="@+id/cardView5"
            android:textSize="34sp" app:layout_constraintVertical_bias="0.538" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>