<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp1">

    <androidx.cardview.widget.CardView
            android:layout_width="392dp"
            android:layout_height="238dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" app:cardElevation="10dp"
            android:background="@color/azul_brillante" android:backgroundTint="@color/azul_brillante"
            app:cardCornerRadius="5dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Sign Up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:textColor="@color/blanco_azulado" android:textSize="34sp" android:textStyle="bold"
                android:fontFamily="@font/allerta" android:layout_marginStart="95dp" android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/icon_title_sign_up"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                android:text="Ingresa por favor a continuacion tu nombre y tu apellido "
                android:textColor="@color/blanco_azulado" android:textSize="24sp" android:textAlignment="center"
                android:textStyle="bold" android:fontFamily="@font/allerta" android:layout_marginTop="90dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/icon_btn_back_view"
                android:id="@+id/btnBackView" android:layout_margin="15dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="298dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.505" app:cardCornerRadius="20dp" app:cardElevation="20dp"
            android:id="@+id/cardView3" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="52dp">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_txt_nombre" tools:ignore="TouchTargetSizeCheck"
                    android:backgroundTint="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="298dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:cardCornerRadius="20dp" app:cardElevation="20dp" app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintBottom_toTopOf="@+id/btn_siguiente_datos_persona">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_txt_apellido" tools:ignore="TouchTargetSizeCheck"
                    android:backgroundTint="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
            android:layout_width="111dp"
            android:layout_height="105dp" app:srcCompat="@drawable/icons_users_sign_up" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="276dp"/>
    <Button
            android:text="@string/titulo_btn_sign_up_siguiente"
            android:layout_width="230dp"
            android:layout_height="70dp" android:id="@+id/btn_siguiente_datos_persona"
            android:textSize="24sp" android:fontFamily="@font/allerta"
            android:textColor="@color/blanco_azulado"
            android:elevation="50dp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="92dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>